Fixed "IllegalAccessException: module java.base does not open java.lang to unnamed module" issue after Gatling upgrade